# OpenAlchemistAI

./: .gitignore  OpenAlchemistAI.cabal  README.md
exe/: Main.hs
src/Games/OpenAlchemist/AI/: Game.hs  Types.hs  Vision.hs
test/: Main.hs
test/Games/OpenAlchemist/AI/: GameTests.hs
